# YZTA-Group-111

./: .gitignore  README.md  config.yaml  confusion_matrix_plot.py  llm_gemini_integration.py  main.py  mlflow_utils.py  package-lock.json  predict_image.py  predict_random_samples.py  predict_system.py  prompt_setup.py  promt_test.py  pull_request_template.md  requirements.txt  run_training.py  setup.py  start_mlflow_ui.py  test_best_model.py  test_predict.py  test_utils.py  train.py  utils.py  visualize_predictions.py
backend/: .gitignore  README.md  firebase-credentials.json  main.py  pyproject.toml
backend/api/v1/: api.py  dependencies.py
backend/api/v1/endpoints/: auth.py  users.py
backend/app/: __init__.py  main.py
backend/app/config/: firebase_config.py  gemini_config.py
backend/app/controllers/: __init__.py  assessment_controller.py  auth_controller.py  general_test_chat_controller.py  user_controller.py
backend/app/core/: __init__.py  dependencies.py
backend/app/dto/: __init__.py
backend/app/dto/assessment/: assessment_dto.py
backend/app/dto/auth/: login_dto.py  register_dto.py
backend/app/dto/general_test_chat/: general_test_chat_history_response_dto.py  general_test_chat_message_request_dto.py  start_general_test_chat_request_dto.py  start_general_test_chat_response_dto.py
backend/app/dto/user/: user_dto.py
backend/app/prompts/: assessment_prompts.py  general_test_chat_llm_prompt.py
backend/app/services/: __init__.py  assessment_service.py  auth_service.py  firebase_service.py  general_test_chat_service.py  llm_service.py  user_service.py
backend/controllers/: auth_controller.py  user_controller.py
backend/core/: config.py  dependencies.py  firebase_config.py
backend/docs/endpoints/auth/: login.md  (+1 more)
backend/dto/: user_dto.py
backend/ml_engine/: README.md  predict_system.py
backend/ml_engine/brain/: model_training.py
backend/ml_engine/breast_cancer_integraion/: config.py  model.py
backend/ml_engine/colon/: model_transform.py  requirements.txt  test_predict.py  test_utils.py  train.py
backend/ml_engine/leukemia/: .gitignore
backend/ml_engine/lung/: requirements.txt
backend/ml_engine/skin/: utils.py
backend/schemas/: user.py
backend/services/: auth_service.py
(+125 files in other folders)
