[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sefa Sinanoğlu <sefasnngl@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.116.0,<0.117.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
pydantic = {extras = ["email"], version = ">=2.11.7,<3.0.0"}
python-dotenv = ">=1.0.0,<2.0.0"
firebase-admin = ">=6.9.0,<7.0.0"

[tool.poetry.scripts]
start = "uvicorn main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"